Resources/Public/CSS/catalog.css
/* ... */
.ctg-catalog-title {
    display: table-cell;
    width: 50%;
}

.ctg-hd-meta-menu {
    display: table-cell;
    text-align: right;
    width: 50%;
}

.ctg-hd-meta-menu li {
    list-style-type: none;
    display: inline;
    padding-left: 1rem;
}

.ctg-hd-meta-menu li a {
    color: #fff;
    text-decoration: none;
}

.ctg-header-home .ctg-hd-search {
    padding: 7rem 0;
}

.ctg-header-follow .ctg-hd-search {
    padding: 1rem 0;
}

.ctg-hd-search form {
    margin: 0;
}

.ctg-hd-meta-menu ul,
.ctg-hd-search ul {
    margin: 0;
    padding: 0;
    font-size: 100%;
    line-height: 1.7;
}

.ctg-hd-search ul {
    text-align: center;
    padding: 0 0.5rem 1rem 0;
}

.ctg-hd-search li {
    list-style-type: none;
    display: inline;
    padding-left: 0.5rem;
}

.ctg-hd-meta-menu .icon,
.ctg-hd-search .icon {
    margin-right: 0.8rem;
}

.ctg-hd-search li a {
    color: #aeaeae;
    text-decoration: none;
}

.ctg-hd-search-form {
    display: table;
    width: 80%;
    margin: 0 auto;
    border-radius: 5px;
    background: #fff;
    padding-top: 1px;
    box-shadow: 0 5px 20px rgba(0,0,0,0.5);
}

.ctg-hd-search-form input {
    width: calc(100% - 180px);
    display: inline-block;
    border-radius: 5px 0 0 5px !important;
    height: 3rem !important;
    font-size: 100% !important;
    color: #000 !important;
    box-shadow: inset 0 0 0 !important;
    border: 0 !important;
    padding: 0 1rem !important;
}

.ctg-hd-search-form button {
    border-radius: 0 5px 5px 0;
    width: 180px;
    border-top: 1px solid #aeaeae;
    background-color: #b61f24;
    color: #fff !important;
    margin: 0;
    padding: 0.5rem 0.5rem 0.5rem 0;
    height: 3rem;
    font-size: 100%;
    text-decoration: none;
}

.ctg-hd-search-form button:hover {
    background-color: #A31A21;
}

.ctg-hd-search-form button .icon {
    font-size: 3rem !important;
    margin-right: 1.8rem;
}

.ctg-hd-addon ul {
    margin: 0;
    padding: 0;
    font-size: 100%;
    line-height: 1.7;
    text-align: center;
}

.ctg-hd-addon li {
    list-style-type: none;
    display: inline;
    padding: 1rem;
}

.ctg-hd-addon a {
    color: #fff !important;
    text-decoration: none;
}

.ctg-hd-meta-menu li a:hover {
    color: #aeaeae;
    text-decoration: underline;
}

.ctg-hd-addon a:hover {
    color: #aeaeae;
    text-decoration: none;
}

.ctg-hd-addon .icon {
    display: table-row;
    font-size: 3rem;
}

.ctg-hd-addon-term {
    display: table-row;
}

.ctg-hd-search li a.ctg-hd-active {
    color: #fff;
    position: relative;
}

.ctg-hd-search li a.ctg-hd-active:after {
    content: '';
    position: absolute;
    left: 50%;
    top: 2rem;
    width: 0;
    height: 0;
    border-left: 12px solid transparent;
    border-right: 12px solid transparent;
    border-bottom: 8px solid #fff;
    clear: both;
}

.ctg-hd-search li a:hover {
    color: #fff;
    text-decoration: underline;
}

.ctg-header-follow .ctg-hd-addon .icon {
    font-size: 2rem;
    display: inline;
}

.ctg-header-follow .ctg-hd-addon li {
    padding: 0;
    padding: 0.2rem;
}

.ctg-header-follow .ctg-hd-addon a:hover .ctg-hd-addon-term {
    text-decoration: underline;
}

.ctg-header-follow .ctg-hd-addon li:first-child {
    border-top: 0px;
}

ul.ctg-search-terms {
    margin: 5px 0 0 0;
    padding: 0;
    border-radius: 5px;
    border-bottom: 1px solid #aeaeae;
    text-align: left;
}

li.ctg-search-term {
    vertical-align: middle;
    display: inline-block;
    margin: 0 0 5px 5px;
    padding: 0;
}

li.ctg-search-term a {
    background: #dadada;
    border-radius: 5px;
    color: #000;
    border: 1px solid #999;
    text-decoration: none;
    padding: 5px 0 3px 5px;
    transition: all 300ms ease-out;
    vertical-align: middle;
}

li.ctg-search-term a:hover {
    background-color: #A31A21;
    border-color: #A31A21;
    text-decoration: none;
}

.ctg-search-autocomplete {
    width: 100%;
    display: table-cell;
    vertical-align: bottom;
    border-radius: 5px 0 0 5px;
    height: 3rem;
    font-size: 100%;
    color: #000;
    box-shadow: inset 0 0 0;
    border: 0;
    padding: 0;
}

.ctg-search-autocomplete-button {
    display: table-cell;
    vertical-align: bottom;
    width: 180px;
}

/*----------------------------------------------------------------------
catalog home - teaser
----------------------------------------------------------------------*/

.ctg-image-teaser {
    height: 250px;
    background: #000;
    display: table;
    width: 100%;
    vertical-align: bottom;
    margin-bottom: 1rem;
}

.ctg-image-teaser-rc {
    min-height: 400px;
    background-color: #dadada;
}

.ctg-it-content {
    display: table-cell;
    vertical-align: bottom;
}

.ctg-image-teaser h3 {
    background: #fff;
    margin: 0 1rem 1rem 1rem;
    padding: 0.5rem 1rem;
}

.ctg-image-teaser h4 {
    background: #f5f5f5;
    margin: 0 1rem 0.3rem 1rem;
    padding: 0.5rem 1rem;
}


.ctg-text-teaser {
    border: 1px solid #dadada;
    padding: 1rem;
}

.ctg-media-content {
    display: table;
    padding: 0.5rem;
    background: #dadada;
    margin: -0.5rem 0 0 0;
}

.ctg-media-content span {
    display: table-cell;
    vertical-align: top;
}

.ctg-media-content p {
    padding: 1rem 1rem 0 0;
    margin: -1rem 0 1rem 0;
    word-break: break-all;
}


/*----------------------------------------------------------------------
catalog home - footer
----------------------------------------------------------------------*/

.ctg-important-info {
    background-color: #b61f24;
    color: #fff;
    padding: 2rem;
}

.ctg-important-info h3,
.ctg-footer h3,
.ctg-footer-notice h3{
    color: #fff;
}

.ctg-footer {
    background: #333;
    color: #fff;
}

.ctg-footer-notice {
    background: #000;
    color: #fff;
}

.ctg-footer .column,
.ctg-footer-notice .column {
    padding: 0;
}

.ctg-footer section,
.ctg-footer-notice section {
    padding: 2rem;
}

.ctg-footer-table {
    display: table;
    width: 100%;
}
/* ... */

